# orderbook-poc

./: README.md
app/: package.json  pnpm-lock.yaml
app/src/api/websockets/: websocket-atoms.ts  websocket-client.ts  websocket-hooks.ts  websocket-types.ts
app/src/app/: layout.tsx  page.tsx
app/src/providers/: index.tsx  websockets.tsx
app/src/types/: order-book.ts
app/src/ui/order-book/: OrderBook.module.css  index.tsx
backend/: .gitignore  order-book-service.ts  package.json  pnpm-lock.yaml  server.js  tsconfig.json
backend-rust/: .gitignore  Cargo.toml
backend-rust/src/: main.rs  order_book.rs
